# libfetch

./: .gitignore  Cargo.toml  README.md  api.go  api_test.go  download.go  go.mod  go.sum  install.go  progress.go
examples/: main.go  main.rs
src/: api.rs  downloader.rs  install.rs  lib.rs  progress.rs
tests/: integration_test.rs
