[package]
name = "libfetch"
version = "0.1.0"
edition = "2021"
description = "A Rust library for downloading, comparing, and installing GitHub release assets with a chainable API."
license = "MIT"
repository = "https://github.com/Cyberhan123/libfetch"
keywords = ["github", "download", "release", "install"]
categories = ["network-programming", "filesystem"]

[lib]
name = "libfetch"
path = "src/lib.rs"

[[example]]
name = "main"
path = "examples/main.rs"

[dependencies]
reqwest = { version = "0.13.2", features = ["blocking", "stream", "json"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zip = "8.1.0"
flate2 = "1.1.9"
tar = "0.4.44"
indicatif = "0.18.4"
futures-util = "0.3"
regex = "1"
bytes = "1"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
